# rift

./: .gitignore  Cargo.toml  Makefile
.github/workflows/: release.yml
beacon/: Cargo.toml  beacon.service
beacon/src/: discovery.rs  hole_punch.rs  main.rs  relay.rs  server.rs
rift-cli/: Cargo.toml
rift-cli/src/: main.rs
rift-cli/src/commands/: init.rs  keys.rs  mod.rs  peers.rs  status.rs
rift-core/: Cargo.toml
rift-core/src/: config.rs  crypto.rs  error.rs  handshake.rs  lib.rs  noise.rs  peer.rs  protocol.rs
rift-node/: Cargo.toml  rift-node.service
rift-node/src/: beacon_client.rs  connection.rs  ipc.rs  main.rs  nat.rs  peer_manager.rs  relay_client.rs  router.rs  tun_device.rs  tunnel.rs
scripts/: build-release.sh  install-beacon.sh  install-node.sh
