[workspace]
resolver = "2"
members = [
    "rift-core",
    "beacon",
    "rift-node",
    "rift-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Brandon Bischoff"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Networking
quinn = "0.11"                    # QUIC implementation
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

# Crypto
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Misc
bytes = "1.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.0"                   # Concurrent hashmap
