[package]
name = "beacon"
description = "Rift mesh VPN coordinator and relay server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "beacon"
path = "src/main.rs"

[dependencies]
rift-core = { path = "../rift-core" }

tokio = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

clap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

dashmap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }

rcgen = "0.12"                    # TLS cert generation
