[package]
name = "rift-cli"
description = "Rift mesh VPN command line interface"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rift"
path = "src/main.rs"

[dependencies]
rift-core = { path = "../rift-core" }

tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Pretty output
colored = "2.1"
tabled = "0.15"
dialoguer = "0.11"
indicatif = "0.17"

# System
dirs = "5.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal", "user"] }
