[package]
name = "rift-core"
description = "Core types, protocol definitions, and crypto for Rift mesh VPN"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }

# Crypto for noise protocol
chacha20poly1305 = "0.10"
sha2 = "0.10"
