[package]
name = "rift-node"
description = "Rift mesh VPN client daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rift-node"
path = "src/main.rs"

[dependencies]
rift-core = { path = "../rift-core" }

tokio = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }

# Crypto (WireGuard-compatible, using same primitives)
x25519-dalek = { workspace = true }
chacha20poly1305 = "0.10"        # AEAD cipher for WireGuard

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

clap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

dashmap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }

# TUN interface
tun = { version = "0.6", features = ["async"] }

# DNS resolution
trust-dns-resolver = "0.23"

# Unix signal handling
[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", features = ["signal"] }
